--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="MAIN">
 
         <h1> BIRTHDAY </h1>
-        <P> HAPPY BIRTHDAY MADHURI</P>
+        <P> HELLO WELCOME TO THE SITE</P>
         <button> CLICK FOR SURPRISE </button>
     </div>
 
