--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head> </head>
+<head>
+    <link rel="stylesheet" href="https://github.com/vamsi-528/simple-project/blob/main/Vamsi%20STARTING.css">
+ </head>
 
 <body>
     <div class="MAIN">
