--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://github.com/vamsi-528/simple-project/blob/main/Vamsi%20STARTING.css">
+    <link rel="stylesheet" href="Vamsi STARTING.css">
  </head>
 
 <body>
