--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="Vamsi STARTING.css">
+    <link rel="stylesheet" href="homepage.css">
  </head>
 
 <body>
