--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="MAIN">
 
-        <h1> BIRTHDAY </h1>
+        <h1> WELCOME </h1>
         <P> HELLO WELCOME TO THE SITE</P>
         <button> CLICK FOR SURPRISE </button>
     </div>
