--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <h1> WELCOME </h1>
         <P> HELLO WELCOME TO THE SITE</P>
-        <button> CLICK FOR SURPRISE </button>
+        <button> Coming Soon..... </button>
     </div>
 
 </body>
