--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head> </head>
+<head>
+  <link rel="stylesheet" href="homepage.css">  
+    </head>
 
 <body>
     <div class="main">
